ortho_config/tests/ui/subcommand_docs_tuple_variant.stderr
error: tuple variants must contain exactly one field
 --> tests/ui/subcommand_docs_tuple_variant.rs:9:5
  |
9 |     Run(Args, Args),
  |     ^^^
